--- a/app/src/main/res/layout/activity_tool_bar.xml
+++ b/app/src/main/res/layout/activity_tool_bar.xml
@@ -9,17 +9,24 @@
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="#1100ff"
-            android:background="#1100ff"
             android:minHeight="50dp"
+            app:contentScrim="#1100ff"
+            app:statusBarScrim="#1100ff"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-            <Toolbar
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/toolbar_background"
+                app:layout_collapseParallaxMultiplier="0.6"
+                app:layout_collapseMode="parallax">
+            </ImageView>
+            <android.support.v7.widget.Toolbar
                 android:id="@+id/tool_bar"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="#1100ff"
                 app:layout_collapseMode="pin">
-            </Toolbar>
+            </android.support.v7.widget.Toolbar>
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
     <android.support.v4.widget.NestedScrollView
