--- a/app/src/main/res/layout/fragment_custom_size_dialog.xml
+++ b/app/src/main/res/layout/fragment_custom_size_dialog.xml
@@ -1,60 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    
+    android:layout_height="match_parent">
+
     <android.support.constraint.ConstraintLayout
         android:layout_width="300dp"
         android:layout_height="200dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/dialog_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="@drawable/dialog_shape">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="自定义对话框尺寸"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:background="#f0f0f0">
-        </TextView>
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:text="对话框内容"
-            android:textAlignment="center">
-        </TextView>
+        app:layout_constraintTop_toTopOf="parent"
+        android:clipChildren="true">
 
         <Button
             android:id="@+id/custom_size_confirm"
             android:layout_width="0dp"
             android:layout_height="40dp"
+            android:text="确定"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/custom_size_cancel"
             app:layout_constraintHorizontal_weight="1"
-            android:text="确定">
-        </Button>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/custom_size_cancel"></Button>
 
         <Button
             android:id="@+id/custom_size_cancel"
             android:layout_width="0dp"
             android:layout_height="40dp"
+            android:text="取消"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/custom_size_confirm"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintHorizontal_weight="1"
-            android:text="取消">
-        </Button>
+            app:layout_constraintLeft_toRightOf="@id/custom_size_confirm"
+            app:layout_constraintRight_toRightOf="parent"></Button>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="#f0f0f0"
+            android:gravity="center"
+            android:text="自定义对话框尺寸"
+            android:textAlignment="center"
+            app:layout_constraintTop_toTopOf="parent"></TextView>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="对话框内容"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></TextView>
 
     </android.support.constraint.ConstraintLayout>
 
